# wisp

./: .gitignore  README.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  requirements-windows.txt  wisp.spec
.github/workflows/: build-windows.yml  ci.yml  deploy.yml
config/: default.yaml
docker/: Dockerfile.api  Dockerfile.worker  docker-compose.yml
docs/: PROPRIETARY_BUILD.md  SETUP_GUIDE.md
hooks/: hook-asyncpg.py  hook-docker.py  hook-minio.py  hook-pydantic.py  hook-redis.py  hook-slowapi.py  hook-sqlalchemy.py  hook-structlog.py  hook-uvicorn.py
migrations/: README.md  env.py
migrations/versions/: 001_initial.py  002_evolution.py  003_dreaming.py
scripts/: backup_db.py  e2e_verify.py  init_db.py  wisp-api.service  wisp-worker.service
skills/calculator/: README.md  main.py  manifest.yaml  requirements.txt
src/: db.py  main.py
src/api/: approvals.py  dreaming.py  evolution.py  files.py  tasks.py  webui.py
src/core/: agent.py  prompts.py  tools.py
src/core/dreaming/: __init__.py  prompt.py  validator.py  worker.py
src/core/llm/: __init__.py  anthropic.py  base.py  factory.py  gateway.py  mock.py  ollama.py  openai.py
src/middleware/: auth.py
src/models/: schemas.py  tables.py
src/services/: etl.py  evolution.py  evolution.py.bak  file_versioning.py  memory.py  minio_client.py  redis_streams.py  sandbox.py  scheduler.py  worker.py
src/utils/: config.py  cost.py  facts.py  health.py  rate_limit.py  security.py  tracing.py
templates/webui/: dashboard.html  new_task.html  task_detail.html
tests/: __init__.py  conftest.py  test_config.py
tests/test_integration/: __init__.py  conftest.py  test_agent.py  test_api.py  test_scheduler.py  test_tools.py
(+11 files in other folders)
