[project]
name = "wisp"
version = "0.1.0"
description = "生产级 Agent 系统：Scheduler/Worker 分离 + Function Calling + 记忆引擎"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",

    # DB
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",

    # Redis
    "redis>=5.2.0",

    # Object Storage
    "boto3>=1.35.0",
    "minio>=7.2.0",

    # AI / Embedding
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",

    # Config
    "pyyaml>=6.0.2",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",

    # Security
    "python-multipart>=0.0.20",

    # Logging / Observability
    "structlog>=24.4.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-asyncpg>=0.48b0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "slowapi>=0.1.9",

    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "I", "N", "W", "UP"]
lint.ignore = ["E501", "E402"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
